RESOLVED FIXED29901
Basic authentication credentials are not sent automatically to top resources
https://bugs.webkit.org/show_bug.cgi?id=29901
Summary Basic authentication credentials are not sent automatically to top resources
Alexey Proskuryakov
Reported 2009-09-29 15:20:21 PDT
Due to a mismatch between CredentialStorage::set() and CredentialStorage::getDefaultAuthenticationCredential(), we don't get default credentials for top level resources. In one case, path becomes empty, and in another, it's "/". Patch forthcoming.
Attachments
proposed fix (3.23 KB, patch)
2009-09-29 15:24 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2009-09-29 15:24:53 PDT
Created attachment 40329 [details] proposed fix
Alexey Proskuryakov
Comment 2 2009-09-29 15:59:23 PDT
Committed revision 48909.
Note You need to log in before you can comment on or make changes to this bug.