        Reviewed by Brady Eidson.

Basic authentication credentials are not sent automatically to top resources
        https://bugs.webkit.org/show_bug.cgi?id=29901

        No new tests - I don't want to pollute root directory of http tests to check for this rather
        minor issue.

        * platform/network/CredentialStorage.cpp:
        (WebCore::CredentialStorage::set): Changed to always preserve leading slash.
        (WebCore::CredentialStorage::getDefaultAuthenticationCredential): Made breaking out of the
        loop more explicit.



Canonical link: https://commits.webkit.org/40469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48909 268f45cc-cd09-0410-ab3c-d52691b4dbfc